# docker-testing

./: Dockerfile  README.md  pyproject.toml
models/: metrics.json  model.pickle
wine_prediction/models/: trainig.py
