[tool.poetry]
name = "docker-testing"
version = "0.1.0"
description = ""
authors = ["aigulkhkmv"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
click = "^7.1.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
